// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LogoComponent should get input data on the img and the anchor element 1`] = `
<div
  id="root2"
  ng-version="18.2.7"
>
  <a
    href="link"
  >
    <img
      alt="logo"
      class="w-12 h-12 md:w-16 md:h-16 mb-4 md:mb-0"
      src="assets/phoenix.jpg"
    />
  </a>
  <!--container-->
</div>
`;

exports[`LogoComponent should not render the template when there is no VM provided 1`] = `
<div
  id="root1"
  ng-version="18.2.7"
>
  <!--container-->
</div>
`;
